@@ -96,6 +96,6 @@ CB_NOWARNDEF (cb_warn_unreachable, "unreachable",
 CB_ONWARNDEF (cb_warn_dialect, "dialect",
 	_("  -Wno-dialect          do not warn dialect specific issues"))
 
-CB_WARNDEF (cb_warn_filler, "others",
-	_("  -Wothers              warnings with no separate group"))
+CB_ONWARNDEF (cb_warn_filler, "others",
+	_("  -Wothers              do not warn different issues"))
 
